k8s/rust-server.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-shortener
  namespace: url-shortener
spec:
  replicas: 1
  selector:
    matchLabels:
      app: url-shortener
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: url-shortener
    spec:
      containers:
        - name: url-shortener-container
          image: ghcr.io/zhuchops/url-shortener:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "500m"
              memory: "128Mi"
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: url-shortener
  namespace: url-shortener
spec:
  selector:
    app: url-shortener
  type: NodePort
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30080
      protocol: TCP
