k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: url-shortener
  namespace: url-shortener
  annotations:
    kubernetes.io/ingress.class: traefic

spec:
  rules:
    - host: my.shortener.com
      http:
        paths:
          - path: /
            backend:
              service:
                name: url-shortener
                port:
                  number: 80
            pathType: Prefix
